
[TestContext/with_event_issues_event.json - 1]
issues_event.json
github.ActionContext{
    Payload: &github.PushEvent{
        PushID:       (*int64)(nil),
        Head:         (*string)(nil),
        Ref:          (*string)(nil),
        Size:         (*int)(nil),
        Commits:      nil,
        Before:       (*string)(nil),
        DistinctSize: (*int)(nil),
        Action:       &"opened",
        After:        (*string)(nil),
        Created:      (*bool)(nil),
        Deleted:      (*bool)(nil),
        Forced:       (*bool)(nil),
        BaseRef:      (*string)(nil),
        Compare:      (*string)(nil),
        Repo:         &github.PushEventRepository{
            ID:       &int64(234619766),
            NodeID:   &"MDEwOlJlcG9zaXRvcnkyMzQ2MTk3NjY=",
            Name:     &"actions-playground",
            FullName: &"tjamet/actions-playground",
            Owner:    &github.User{
                Login:                   &"tjamet",
                ID:                      &int64(6061440),
                NodeID:                  &"MDQ6VXNlcjYwNjE0NDA=",
                AvatarURL:               &"https://avatars1.githubusercontent.com/u/6061440?v=4",
                HTMLURL:                 &"https://github.com/tjamet",
                GravatarID:              &"",
                Name:                    (*string)(nil),
                Company:                 (*string)(nil),
                Blog:                    (*string)(nil),
                Location:                (*string)(nil),
                Email:                   (*string)(nil),
                Hireable:                (*bool)(nil),
                Bio:                     (*string)(nil),
                TwitterUsername:         (*string)(nil),
                PublicRepos:             (*int)(nil),
                PublicGists:             (*int)(nil),
                Followers:               (*int)(nil),
                Following:               (*int)(nil),
                CreatedAt:               (*github.Timestamp)(nil),
                UpdatedAt:               (*github.Timestamp)(nil),
                SuspendedAt:             (*github.Timestamp)(nil),
                Type:                    &"User",
                SiteAdmin:               &bool(false),
                TotalPrivateRepos:       (*int64)(nil),
                OwnedPrivateRepos:       (*int64)(nil),
                PrivateGists:            (*int)(nil),
                DiskUsage:               (*int)(nil),
                Collaborators:           (*int)(nil),
                TwoFactorAuthentication: (*bool)(nil),
                Plan:                    (*github.Plan)(nil),
                LdapDn:                  (*string)(nil),
                URL:                     &"https://api.github.com/users/tjamet",
                EventsURL:               &"https://api.github.com/users/tjamet/events{/privacy}",
                FollowingURL:            &"https://api.github.com/users/tjamet/following{/other_user}",
                FollowersURL:            &"https://api.github.com/users/tjamet/followers",
                GistsURL:                &"https://api.github.com/users/tjamet/gists{/gist_id}",
                OrganizationsURL:        &"https://api.github.com/users/tjamet/orgs",
                ReceivedEventsURL:       &"https://api.github.com/users/tjamet/received_events",
                ReposURL:                &"https://api.github.com/users/tjamet/repos",
                StarredURL:              &"https://api.github.com/users/tjamet/starred{/owner}{/repo}",
                SubscriptionsURL:        &"https://api.github.com/users/tjamet/subscriptions",
                TextMatches:             nil,
                Permissions:             {},
                RoleName:                (*string)(nil),
                Assignment:              (*string)(nil),
                InheritedFrom:           nil,
            },
            Private:          &bool(false),
            Description:      (*string)(nil),
            Fork:             &bool(false),
            CreatedAt:        time.Date(2020, time.January, 17, 19, 16, 48, 0, time.UTC),
            PushedAt:         time.Date(2020, time.January, 17, 19, 21, 57, 0, time.UTC),
            UpdatedAt:        time.Date(2020, time.January, 17, 19, 21, 59, 0, time.UTC),
            Homepage:         (*string)(nil),
            PullsURL:         &"https://api.github.com/repos/tjamet/actions-playground/pulls{/number}",
            Size:             &int(0),
            StargazersCount:  &int(0),
            WatchersCount:    &int(0),
            Language:         (*string)(nil),
            HasIssues:        &bool(true),
            HasDownloads:     &bool(true),
            HasWiki:          &bool(true),
            HasPages:         &bool(false),
            ForksCount:       &int(0),
            Archived:         &bool(false),
            Disabled:         &bool(false),
            OpenIssuesCount:  &int(1),
            DefaultBranch:    &"master",
            MasterBranch:     (*string)(nil),
            Organization:     (*string)(nil),
            URL:              &"https://api.github.com/repos/tjamet/actions-playground",
            ArchiveURL:       &"https://api.github.com/repos/tjamet/actions-playground/{archive_format}{/ref}",
            HTMLURL:          &"https://github.com/tjamet/actions-playground",
            StatusesURL:      &"https://api.github.com/repos/tjamet/actions-playground/statuses/{sha}",
            GitURL:           &"git://github.com/tjamet/actions-playground.git",
            SSHURL:           &"git@github.com:tjamet/actions-playground.git",
            CloneURL:         &"https://github.com/tjamet/actions-playground.git",
            SVNURL:           &"https://github.com/tjamet/actions-playground",
            Topics:           nil,
            CustomProperties: {},
        },
        HeadCommit: (*github.HeadCommit)(nil),
        Pusher:     (*github.CommitAuthor)(nil),
        Sender:     &github.User{
            Login:                   &"tjamet",
            ID:                      &int64(6061440),
            NodeID:                  &"MDQ6VXNlcjYwNjE0NDA=",
            AvatarURL:               &"https://avatars1.githubusercontent.com/u/6061440?v=4",
            HTMLURL:                 &"https://github.com/tjamet",
            GravatarID:              &"",
            Name:                    (*string)(nil),
            Company:                 (*string)(nil),
            Blog:                    (*string)(nil),
            Location:                (*string)(nil),
            Email:                   (*string)(nil),
            Hireable:                (*bool)(nil),
            Bio:                     (*string)(nil),
            TwitterUsername:         (*string)(nil),
            PublicRepos:             (*int)(nil),
            PublicGists:             (*int)(nil),
            Followers:               (*int)(nil),
            Following:               (*int)(nil),
            CreatedAt:               (*github.Timestamp)(nil),
            UpdatedAt:               (*github.Timestamp)(nil),
            SuspendedAt:             (*github.Timestamp)(nil),
            Type:                    &"User",
            SiteAdmin:               &bool(false),
            TotalPrivateRepos:       (*int64)(nil),
            OwnedPrivateRepos:       (*int64)(nil),
            PrivateGists:            (*int)(nil),
            DiskUsage:               (*int)(nil),
            Collaborators:           (*int)(nil),
            TwoFactorAuthentication: (*bool)(nil),
            Plan:                    (*github.Plan)(nil),
            LdapDn:                  (*string)(nil),
            URL:                     &"https://api.github.com/users/tjamet",
            EventsURL:               &"https://api.github.com/users/tjamet/events{/privacy}",
            FollowingURL:            &"https://api.github.com/users/tjamet/following{/other_user}",
            FollowersURL:            &"https://api.github.com/users/tjamet/followers",
            GistsURL:                &"https://api.github.com/users/tjamet/gists{/gist_id}",
            OrganizationsURL:        &"https://api.github.com/users/tjamet/orgs",
            ReceivedEventsURL:       &"https://api.github.com/users/tjamet/received_events",
            ReposURL:                &"https://api.github.com/users/tjamet/repos",
            StarredURL:              &"https://api.github.com/users/tjamet/starred{/owner}{/repo}",
            SubscriptionsURL:        &"https://api.github.com/users/tjamet/subscriptions",
            TextMatches:             nil,
            Permissions:             {},
            RoleName:                (*string)(nil),
            Assignment:              (*string)(nil),
            InheritedFrom:           nil,
        },
        Installation: (*github.Installation)(nil),
        Organization: (*github.Organization)(nil),
    },
    EventName:  "push",
    SHA:        "d74fd518cf0410699c6b748924727686c1606d00",
    Ref:        "refs/heads/master",
    Workflow:   "CI",
    Action:     "run2",
    Actor:      "tjamet",
    RunAttempt: 0,
    RunNumber:  0,
    RunId:      0,
    ApiUrl:     "https://api.gogithub.com",
    ServerUrl:  "https://gogithub.com",
    GraphqlUrl: "https://api.gogithub.com/graphql",
    Issue:      github.ActionIssue{
        ActionRepo: github.ActionRepo{Owner:"tjamet", Repo:"actions-playground"},
        Number:     0,
    },
    Repo:              github.ActionRepo{Owner:"tjamet", Repo:"actions-playground"},
    OutputFilePath:    "",
    StateFilePath:     "",
    ExportEnvFilePath: "",
}
---

[TestContext/with_event_label_event.json - 1]
label_event.json
github.ActionContext{
    Payload: &github.PushEvent{
        PushID:       (*int64)(nil),
        Head:         (*string)(nil),
        Ref:          (*string)(nil),
        Size:         (*int)(nil),
        Commits:      nil,
        Before:       (*string)(nil),
        DistinctSize: (*int)(nil),
        Action:       &"created",
        After:        (*string)(nil),
        Created:      (*bool)(nil),
        Deleted:      (*bool)(nil),
        Forced:       (*bool)(nil),
        BaseRef:      (*string)(nil),
        Compare:      (*string)(nil),
        Repo:         &github.PushEventRepository{
            ID:       &int64(234619766),
            NodeID:   &"MDEwOlJlcG9zaXRvcnkyMzQ2MTk3NjY=",
            Name:     &"actions-playground",
            FullName: &"tjamet/actions-playground",
            Owner:    &github.User{
                Login:                   &"tjamet",
                ID:                      &int64(6061440),
                NodeID:                  &"MDQ6VXNlcjYwNjE0NDA=",
                AvatarURL:               &"https://avatars1.githubusercontent.com/u/6061440?v=4",
                HTMLURL:                 &"https://github.com/tjamet",
                GravatarID:              &"",
                Name:                    (*string)(nil),
                Company:                 (*string)(nil),
                Blog:                    (*string)(nil),
                Location:                (*string)(nil),
                Email:                   (*string)(nil),
                Hireable:                (*bool)(nil),
                Bio:                     (*string)(nil),
                TwitterUsername:         (*string)(nil),
                PublicRepos:             (*int)(nil),
                PublicGists:             (*int)(nil),
                Followers:               (*int)(nil),
                Following:               (*int)(nil),
                CreatedAt:               (*github.Timestamp)(nil),
                UpdatedAt:               (*github.Timestamp)(nil),
                SuspendedAt:             (*github.Timestamp)(nil),
                Type:                    &"User",
                SiteAdmin:               &bool(false),
                TotalPrivateRepos:       (*int64)(nil),
                OwnedPrivateRepos:       (*int64)(nil),
                PrivateGists:            (*int)(nil),
                DiskUsage:               (*int)(nil),
                Collaborators:           (*int)(nil),
                TwoFactorAuthentication: (*bool)(nil),
                Plan:                    (*github.Plan)(nil),
                LdapDn:                  (*string)(nil),
                URL:                     &"https://api.github.com/users/tjamet",
                EventsURL:               &"https://api.github.com/users/tjamet/events{/privacy}",
                FollowingURL:            &"https://api.github.com/users/tjamet/following{/other_user}",
                FollowersURL:            &"https://api.github.com/users/tjamet/followers",
                GistsURL:                &"https://api.github.com/users/tjamet/gists{/gist_id}",
                OrganizationsURL:        &"https://api.github.com/users/tjamet/orgs",
                ReceivedEventsURL:       &"https://api.github.com/users/tjamet/received_events",
                ReposURL:                &"https://api.github.com/users/tjamet/repos",
                StarredURL:              &"https://api.github.com/users/tjamet/starred{/owner}{/repo}",
                SubscriptionsURL:        &"https://api.github.com/users/tjamet/subscriptions",
                TextMatches:             nil,
                Permissions:             {},
                RoleName:                (*string)(nil),
                Assignment:              (*string)(nil),
                InheritedFrom:           nil,
            },
            Private:          &bool(false),
            Description:      (*string)(nil),
            Fork:             &bool(false),
            CreatedAt:        time.Date(2020, time.January, 17, 19, 16, 48, 0, time.UTC),
            PushedAt:         time.Date(2020, time.January, 17, 19, 21, 57, 0, time.UTC),
            UpdatedAt:        time.Date(2020, time.January, 17, 19, 21, 59, 0, time.UTC),
            Homepage:         (*string)(nil),
            PullsURL:         &"https://api.github.com/repos/tjamet/actions-playground/pulls{/number}",
            Size:             &int(0),
            StargazersCount:  &int(0),
            WatchersCount:    &int(0),
            Language:         (*string)(nil),
            HasIssues:        &bool(true),
            HasDownloads:     &bool(true),
            HasWiki:          &bool(true),
            HasPages:         &bool(false),
            ForksCount:       &int(0),
            Archived:         &bool(false),
            Disabled:         &bool(false),
            OpenIssuesCount:  &int(1),
            DefaultBranch:    &"master",
            MasterBranch:     (*string)(nil),
            Organization:     (*string)(nil),
            URL:              &"https://api.github.com/repos/tjamet/actions-playground",
            ArchiveURL:       &"https://api.github.com/repos/tjamet/actions-playground/{archive_format}{/ref}",
            HTMLURL:          &"https://github.com/tjamet/actions-playground",
            StatusesURL:      &"https://api.github.com/repos/tjamet/actions-playground/statuses/{sha}",
            GitURL:           &"git://github.com/tjamet/actions-playground.git",
            SSHURL:           &"git@github.com:tjamet/actions-playground.git",
            CloneURL:         &"https://github.com/tjamet/actions-playground.git",
            SVNURL:           &"https://github.com/tjamet/actions-playground",
            Topics:           nil,
            CustomProperties: {},
        },
        HeadCommit: (*github.HeadCommit)(nil),
        Pusher:     (*github.CommitAuthor)(nil),
        Sender:     &github.User{
            Login:                   &"tjamet",
            ID:                      &int64(6061440),
            NodeID:                  &"MDQ6VXNlcjYwNjE0NDA=",
            AvatarURL:               &"https://avatars1.githubusercontent.com/u/6061440?v=4",
            HTMLURL:                 &"https://github.com/tjamet",
            GravatarID:              &"",
            Name:                    (*string)(nil),
            Company:                 (*string)(nil),
            Blog:                    (*string)(nil),
            Location:                (*string)(nil),
            Email:                   (*string)(nil),
            Hireable:                (*bool)(nil),
            Bio:                     (*string)(nil),
            TwitterUsername:         (*string)(nil),
            PublicRepos:             (*int)(nil),
            PublicGists:             (*int)(nil),
            Followers:               (*int)(nil),
            Following:               (*int)(nil),
            CreatedAt:               (*github.Timestamp)(nil),
            UpdatedAt:               (*github.Timestamp)(nil),
            SuspendedAt:             (*github.Timestamp)(nil),
            Type:                    &"User",
            SiteAdmin:               &bool(false),
            TotalPrivateRepos:       (*int64)(nil),
            OwnedPrivateRepos:       (*int64)(nil),
            PrivateGists:            (*int)(nil),
            DiskUsage:               (*int)(nil),
            Collaborators:           (*int)(nil),
            TwoFactorAuthentication: (*bool)(nil),
            Plan:                    (*github.Plan)(nil),
            LdapDn:                  (*string)(nil),
            URL:                     &"https://api.github.com/users/tjamet",
            EventsURL:               &"https://api.github.com/users/tjamet/events{/privacy}",
            FollowingURL:            &"https://api.github.com/users/tjamet/following{/other_user}",
            FollowersURL:            &"https://api.github.com/users/tjamet/followers",
            GistsURL:                &"https://api.github.com/users/tjamet/gists{/gist_id}",
            OrganizationsURL:        &"https://api.github.com/users/tjamet/orgs",
            ReceivedEventsURL:       &"https://api.github.com/users/tjamet/received_events",
            ReposURL:                &"https://api.github.com/users/tjamet/repos",
            StarredURL:              &"https://api.github.com/users/tjamet/starred{/owner}{/repo}",
            SubscriptionsURL:        &"https://api.github.com/users/tjamet/subscriptions",
            TextMatches:             nil,
            Permissions:             {},
            RoleName:                (*string)(nil),
            Assignment:              (*string)(nil),
            InheritedFrom:           nil,
        },
        Installation: (*github.Installation)(nil),
        Organization: (*github.Organization)(nil),
    },
    EventName:  "push",
    SHA:        "d74fd518cf0410699c6b748924727686c1606d00",
    Ref:        "refs/heads/master",
    Workflow:   "CI",
    Action:     "run2",
    Actor:      "tjamet",
    RunAttempt: 0,
    RunNumber:  0,
    RunId:      0,
    ApiUrl:     "https://api.gogithub.com",
    ServerUrl:  "https://gogithub.com",
    GraphqlUrl: "https://api.gogithub.com/graphql",
    Issue:      github.ActionIssue{
        ActionRepo: github.ActionRepo{Owner:"tjamet", Repo:"actions-playground"},
        Number:     0,
    },
    Repo:              github.ActionRepo{Owner:"tjamet", Repo:"actions-playground"},
    OutputFilePath:    "",
    StateFilePath:     "",
    ExportEnvFilePath: "",
}
---

[TestContext/with_event_milestone_event.json - 1]
milestone_event.json
github.ActionContext{
    Payload: &github.PushEvent{
        PushID:       (*int64)(nil),
        Head:         (*string)(nil),
        Ref:          (*string)(nil),
        Size:         (*int)(nil),
        Commits:      nil,
        Before:       (*string)(nil),
        DistinctSize: (*int)(nil),
        Action:       &"created",
        After:        (*string)(nil),
        Created:      (*bool)(nil),
        Deleted:      (*bool)(nil),
        Forced:       (*bool)(nil),
        BaseRef:      (*string)(nil),
        Compare:      (*string)(nil),
        Repo:         &github.PushEventRepository{
            ID:       &int64(234619766),
            NodeID:   &"MDEwOlJlcG9zaXRvcnkyMzQ2MTk3NjY=",
            Name:     &"actions-playground",
            FullName: &"tjamet/actions-playground",
            Owner:    &github.User{
                Login:                   &"tjamet",
                ID:                      &int64(6061440),
                NodeID:                  &"MDQ6VXNlcjYwNjE0NDA=",
                AvatarURL:               &"https://avatars1.githubusercontent.com/u/6061440?v=4",
                HTMLURL:                 &"https://github.com/tjamet",
                GravatarID:              &"",
                Name:                    (*string)(nil),
                Company:                 (*string)(nil),
                Blog:                    (*string)(nil),
                Location:                (*string)(nil),
                Email:                   (*string)(nil),
                Hireable:                (*bool)(nil),
                Bio:                     (*string)(nil),
                TwitterUsername:         (*string)(nil),
                PublicRepos:             (*int)(nil),
                PublicGists:             (*int)(nil),
                Followers:               (*int)(nil),
                Following:               (*int)(nil),
                CreatedAt:               (*github.Timestamp)(nil),
                UpdatedAt:               (*github.Timestamp)(nil),
                SuspendedAt:             (*github.Timestamp)(nil),
                Type:                    &"User",
                SiteAdmin:               &bool(false),
                TotalPrivateRepos:       (*int64)(nil),
                OwnedPrivateRepos:       (*int64)(nil),
                PrivateGists:            (*int)(nil),
                DiskUsage:               (*int)(nil),
                Collaborators:           (*int)(nil),
                TwoFactorAuthentication: (*bool)(nil),
                Plan:                    (*github.Plan)(nil),
                LdapDn:                  (*string)(nil),
                URL:                     &"https://api.github.com/users/tjamet",
                EventsURL:               &"https://api.github.com/users/tjamet/events{/privacy}",
                FollowingURL:            &"https://api.github.com/users/tjamet/following{/other_user}",
                FollowersURL:            &"https://api.github.com/users/tjamet/followers",
                GistsURL:                &"https://api.github.com/users/tjamet/gists{/gist_id}",
                OrganizationsURL:        &"https://api.github.com/users/tjamet/orgs",
                ReceivedEventsURL:       &"https://api.github.com/users/tjamet/received_events",
                ReposURL:                &"https://api.github.com/users/tjamet/repos",
                StarredURL:              &"https://api.github.com/users/tjamet/starred{/owner}{/repo}",
                SubscriptionsURL:        &"https://api.github.com/users/tjamet/subscriptions",
                TextMatches:             nil,
                Permissions:             {},
                RoleName:                (*string)(nil),
                Assignment:              (*string)(nil),
                InheritedFrom:           nil,
            },
            Private:          &bool(false),
            Description:      (*string)(nil),
            Fork:             &bool(false),
            CreatedAt:        time.Date(2020, time.January, 17, 19, 16, 48, 0, time.UTC),
            PushedAt:         time.Date(2020, time.January, 17, 19, 21, 57, 0, time.UTC),
            UpdatedAt:        time.Date(2020, time.January, 17, 19, 21, 59, 0, time.UTC),
            Homepage:         (*string)(nil),
            PullsURL:         &"https://api.github.com/repos/tjamet/actions-playground/pulls{/number}",
            Size:             &int(0),
            StargazersCount:  &int(0),
            WatchersCount:    &int(0),
            Language:         (*string)(nil),
            HasIssues:        &bool(true),
            HasDownloads:     &bool(true),
            HasWiki:          &bool(true),
            HasPages:         &bool(false),
            ForksCount:       &int(0),
            Archived:         &bool(false),
            Disabled:         &bool(false),
            OpenIssuesCount:  &int(1),
            DefaultBranch:    &"master",
            MasterBranch:     (*string)(nil),
            Organization:     (*string)(nil),
            URL:              &"https://api.github.com/repos/tjamet/actions-playground",
            ArchiveURL:       &"https://api.github.com/repos/tjamet/actions-playground/{archive_format}{/ref}",
            HTMLURL:          &"https://github.com/tjamet/actions-playground",
            StatusesURL:      &"https://api.github.com/repos/tjamet/actions-playground/statuses/{sha}",
            GitURL:           &"git://github.com/tjamet/actions-playground.git",
            SSHURL:           &"git@github.com:tjamet/actions-playground.git",
            CloneURL:         &"https://github.com/tjamet/actions-playground.git",
            SVNURL:           &"https://github.com/tjamet/actions-playground",
            Topics:           nil,
            CustomProperties: {},
        },
        HeadCommit: (*github.HeadCommit)(nil),
        Pusher:     (*github.CommitAuthor)(nil),
        Sender:     &github.User{
            Login:                   &"tjamet",
            ID:                      &int64(6061440),
            NodeID:                  &"MDQ6VXNlcjYwNjE0NDA=",
            AvatarURL:               &"https://avatars1.githubusercontent.com/u/6061440?v=4",
            HTMLURL:                 &"https://github.com/tjamet",
            GravatarID:              &"",
            Name:                    (*string)(nil),
            Company:                 (*string)(nil),
            Blog:                    (*string)(nil),
            Location:                (*string)(nil),
            Email:                   (*string)(nil),
            Hireable:                (*bool)(nil),
            Bio:                     (*string)(nil),
            TwitterUsername:         (*string)(nil),
            PublicRepos:             (*int)(nil),
            PublicGists:             (*int)(nil),
            Followers:               (*int)(nil),
            Following:               (*int)(nil),
            CreatedAt:               (*github.Timestamp)(nil),
            UpdatedAt:               (*github.Timestamp)(nil),
            SuspendedAt:             (*github.Timestamp)(nil),
            Type:                    &"User",
            SiteAdmin:               &bool(false),
            TotalPrivateRepos:       (*int64)(nil),
            OwnedPrivateRepos:       (*int64)(nil),
            PrivateGists:            (*int)(nil),
            DiskUsage:               (*int)(nil),
            Collaborators:           (*int)(nil),
            TwoFactorAuthentication: (*bool)(nil),
            Plan:                    (*github.Plan)(nil),
            LdapDn:                  (*string)(nil),
            URL:                     &"https://api.github.com/users/tjamet",
            EventsURL:               &"https://api.github.com/users/tjamet/events{/privacy}",
            FollowingURL:            &"https://api.github.com/users/tjamet/following{/other_user}",
            FollowersURL:            &"https://api.github.com/users/tjamet/followers",
            GistsURL:                &"https://api.github.com/users/tjamet/gists{/gist_id}",
            OrganizationsURL:        &"https://api.github.com/users/tjamet/orgs",
            ReceivedEventsURL:       &"https://api.github.com/users/tjamet/received_events",
            ReposURL:                &"https://api.github.com/users/tjamet/repos",
            StarredURL:              &"https://api.github.com/users/tjamet/starred{/owner}{/repo}",
            SubscriptionsURL:        &"https://api.github.com/users/tjamet/subscriptions",
            TextMatches:             nil,
            Permissions:             {},
            RoleName:                (*string)(nil),
            Assignment:              (*string)(nil),
            InheritedFrom:           nil,
        },
        Installation: (*github.Installation)(nil),
        Organization: (*github.Organization)(nil),
    },
    EventName:  "push",
    SHA:        "d74fd518cf0410699c6b748924727686c1606d00",
    Ref:        "refs/heads/master",
    Workflow:   "CI",
    Action:     "run2",
    Actor:      "tjamet",
    RunAttempt: 0,
    RunNumber:  0,
    RunId:      0,
    ApiUrl:     "https://api.gogithub.com",
    ServerUrl:  "https://gogithub.com",
    GraphqlUrl: "https://api.gogithub.com/graphql",
    Issue:      github.ActionIssue{
        ActionRepo: github.ActionRepo{Owner:"tjamet", Repo:"actions-playground"},
        Number:     0,
    },
    Repo:              github.ActionRepo{Owner:"tjamet", Repo:"actions-playground"},
    OutputFilePath:    "",
    StateFilePath:     "",
    ExportEnvFilePath: "",
}
---

[TestContext/with_event_push_event.json - 1]
push_event.json
github.ActionContext{
    Payload: &github.PushEvent{
        PushID:  (*int64)(nil),
        Head:    (*string)(nil),
        Ref:     &"refs/heads/master",
        Size:    (*int)(nil),
        Commits: {
            &github.HeadCommit{
                Message: &"Create blank.yml",
                Author:  &github.CommitAuthor{
                    Date:  (*github.Timestamp)(nil),
                    Name:  &"Thibault Jamet",
                    Email: &"tjamet@users.noreply.github.com",
                    Login: &"tjamet",
                },
                URL:       &"https://github.com/tjamet/actions-playground/commit/d74fd518cf0410699c6b748924727686c1606d00",
                Distinct:  &bool(true),
                SHA:       (*string)(nil),
                ID:        &"d74fd518cf0410699c6b748924727686c1606d00",
                TreeID:    &"96750fa08da999dcf6d9ee7e1b1d31324cab81fa",
                Timestamp: time.Date(2020, time.January, 17, 20, 21, 57, 0, time.Location("")),
                Committer: &github.CommitAuthor{
                    Date:  (*github.Timestamp)(nil),
                    Name:  &"GitHub",
                    Email: &"noreply@github.com",
                    Login: &"web-flow",
                },
                Added:    nil,
                Removed:  nil,
                Modified: nil,
            },
        },
        Before:       &"9e47c46c44339b11e1e9b3e587f1bc33536ec85e",
        DistinctSize: (*int)(nil),
        Action:       (*string)(nil),
        After:        &"d74fd518cf0410699c6b748924727686c1606d00",
        Created:      &bool(false),
        Deleted:      &bool(false),
        Forced:       &bool(false),
        BaseRef:      (*string)(nil),
        Compare:      &"https://github.com/tjamet/actions-playground/compare/9e47c46c4433...d74fd518cf04",
        Repo:         &github.PushEventRepository{
            ID:       &int64(234619766),
            NodeID:   &"MDEwOlJlcG9zaXRvcnkyMzQ2MTk3NjY=",
            Name:     &"actions-playground",
            FullName: &"tjamet/actions-playground",
            Owner:    &github.User{
                Login:                   &"tjamet",
                ID:                      &int64(6061440),
                NodeID:                  &"MDQ6VXNlcjYwNjE0NDA=",
                AvatarURL:               &"https://avatars1.githubusercontent.com/u/6061440?v=4",
                HTMLURL:                 &"https://github.com/tjamet",
                GravatarID:              &"",
                Name:                    &"tjamet",
                Company:                 (*string)(nil),
                Blog:                    (*string)(nil),
                Location:                (*string)(nil),
                Email:                   &"tjamet@users.noreply.github.com",
                Hireable:                (*bool)(nil),
                Bio:                     (*string)(nil),
                TwitterUsername:         (*string)(nil),
                PublicRepos:             (*int)(nil),
                PublicGists:             (*int)(nil),
                Followers:               (*int)(nil),
                Following:               (*int)(nil),
                CreatedAt:               (*github.Timestamp)(nil),
                UpdatedAt:               (*github.Timestamp)(nil),
                SuspendedAt:             (*github.Timestamp)(nil),
                Type:                    &"User",
                SiteAdmin:               &bool(false),
                TotalPrivateRepos:       (*int64)(nil),
                OwnedPrivateRepos:       (*int64)(nil),
                PrivateGists:            (*int)(nil),
                DiskUsage:               (*int)(nil),
                Collaborators:           (*int)(nil),
                TwoFactorAuthentication: (*bool)(nil),
                Plan:                    (*github.Plan)(nil),
                LdapDn:                  (*string)(nil),
                URL:                     &"https://api.github.com/users/tjamet",
                EventsURL:               &"https://api.github.com/users/tjamet/events{/privacy}",
                FollowingURL:            &"https://api.github.com/users/tjamet/following{/other_user}",
                FollowersURL:            &"https://api.github.com/users/tjamet/followers",
                GistsURL:                &"https://api.github.com/users/tjamet/gists{/gist_id}",
                OrganizationsURL:        &"https://api.github.com/users/tjamet/orgs",
                ReceivedEventsURL:       &"https://api.github.com/users/tjamet/received_events",
                ReposURL:                &"https://api.github.com/users/tjamet/repos",
                StarredURL:              &"https://api.github.com/users/tjamet/starred{/owner}{/repo}",
                SubscriptionsURL:        &"https://api.github.com/users/tjamet/subscriptions",
                TextMatches:             nil,
                Permissions:             {},
                RoleName:                (*string)(nil),
                Assignment:              (*string)(nil),
                InheritedFrom:           nil,
            },
            Private:          &bool(false),
            Description:      (*string)(nil),
            Fork:             &bool(false),
            CreatedAt:        time.Date(2020, time.January, 17, 14, 16, 48, 0, time.Local),
            PushedAt:         time.Date(2020, time.January, 17, 14, 21, 57, 0, time.Local),
            UpdatedAt:        time.Date(2020, time.January, 17, 19, 19, 3, 0, time.UTC),
            Homepage:         (*string)(nil),
            PullsURL:         &"https://api.github.com/repos/tjamet/actions-playground/pulls{/number}",
            Size:             &int(0),
            StargazersCount:  &int(0),
            WatchersCount:    &int(0),
            Language:         (*string)(nil),
            HasIssues:        &bool(true),
            HasDownloads:     &bool(true),
            HasWiki:          &bool(true),
            HasPages:         &bool(false),
            ForksCount:       &int(0),
            Archived:         &bool(false),
            Disabled:         &bool(false),
            OpenIssuesCount:  &int(0),
            DefaultBranch:    &"master",
            MasterBranch:     &"master",
            Organization:     (*string)(nil),
            URL:              &"https://github.com/tjamet/actions-playground",
            ArchiveURL:       &"https://api.github.com/repos/tjamet/actions-playground/{archive_format}{/ref}",
            HTMLURL:          &"https://github.com/tjamet/actions-playground",
            StatusesURL:      &"https://api.github.com/repos/tjamet/actions-playground/statuses/{sha}",
            GitURL:           &"git://github.com/tjamet/actions-playground.git",
            SSHURL:           &"git@github.com:tjamet/actions-playground.git",
            CloneURL:         &"https://github.com/tjamet/actions-playground.git",
            SVNURL:           &"https://github.com/tjamet/actions-playground",
            Topics:           nil,
            CustomProperties: {},
        },
        HeadCommit: &github.HeadCommit{
            Message: &"Create blank.yml",
            Author:  &github.CommitAuthor{
                Date:  (*github.Timestamp)(nil),
                Name:  &"Thibault Jamet",
                Email: &"tjamet@users.noreply.github.com",
                Login: &"tjamet",
            },
            URL:       &"https://github.com/tjamet/actions-playground/commit/d74fd518cf0410699c6b748924727686c1606d00",
            Distinct:  &bool(true),
            SHA:       (*string)(nil),
            ID:        &"d74fd518cf0410699c6b748924727686c1606d00",
            TreeID:    &"96750fa08da999dcf6d9ee7e1b1d31324cab81fa",
            Timestamp: time.Date(2020, time.January, 17, 20, 21, 57, 0, time.Location("")),
            Committer: &github.CommitAuthor{
                Date:  (*github.Timestamp)(nil),
                Name:  &"GitHub",
                Email: &"noreply@github.com",
                Login: &"web-flow",
            },
            Added:    nil,
            Removed:  nil,
            Modified: nil,
        },
        Pusher: &github.CommitAuthor{
            Date:  (*github.Timestamp)(nil),
            Name:  &"tjamet",
            Email: &"tjamet@users.noreply.github.com",
            Login: (*string)(nil),
        },
        Sender: &github.User{
            Login:                   &"tjamet",
            ID:                      &int64(6061440),
            NodeID:                  &"MDQ6VXNlcjYwNjE0NDA=",
            AvatarURL:               &"https://avatars1.githubusercontent.com/u/6061440?v=4",
            HTMLURL:                 &"https://github.com/tjamet",
            GravatarID:              &"",
            Name:                    (*string)(nil),
            Company:                 (*string)(nil),
            Blog:                    (*string)(nil),
            Location:                (*string)(nil),
            Email:                   (*string)(nil),
            Hireable:                (*bool)(nil),
            Bio:                     (*string)(nil),
            TwitterUsername:         (*string)(nil),
            PublicRepos:             (*int)(nil),
            PublicGists:             (*int)(nil),
            Followers:               (*int)(nil),
            Following:               (*int)(nil),
            CreatedAt:               (*github.Timestamp)(nil),
            UpdatedAt:               (*github.Timestamp)(nil),
            SuspendedAt:             (*github.Timestamp)(nil),
            Type:                    &"User",
            SiteAdmin:               &bool(false),
            TotalPrivateRepos:       (*int64)(nil),
            OwnedPrivateRepos:       (*int64)(nil),
            PrivateGists:            (*int)(nil),
            DiskUsage:               (*int)(nil),
            Collaborators:           (*int)(nil),
            TwoFactorAuthentication: (*bool)(nil),
            Plan:                    (*github.Plan)(nil),
            LdapDn:                  (*string)(nil),
            URL:                     &"https://api.github.com/users/tjamet",
            EventsURL:               &"https://api.github.com/users/tjamet/events{/privacy}",
            FollowingURL:            &"https://api.github.com/users/tjamet/following{/other_user}",
            FollowersURL:            &"https://api.github.com/users/tjamet/followers",
            GistsURL:                &"https://api.github.com/users/tjamet/gists{/gist_id}",
            OrganizationsURL:        &"https://api.github.com/users/tjamet/orgs",
            ReceivedEventsURL:       &"https://api.github.com/users/tjamet/received_events",
            ReposURL:                &"https://api.github.com/users/tjamet/repos",
            StarredURL:              &"https://api.github.com/users/tjamet/starred{/owner}{/repo}",
            SubscriptionsURL:        &"https://api.github.com/users/tjamet/subscriptions",
            TextMatches:             nil,
            Permissions:             {},
            RoleName:                (*string)(nil),
            Assignment:              (*string)(nil),
            InheritedFrom:           nil,
        },
        Installation: (*github.Installation)(nil),
        Organization: (*github.Organization)(nil),
    },
    EventName:  "push",
    SHA:        "d74fd518cf0410699c6b748924727686c1606d00",
    Ref:        "refs/heads/master",
    Workflow:   "CI",
    Action:     "run2",
    Actor:      "tjamet",
    RunAttempt: 0,
    RunNumber:  0,
    RunId:      0,
    ApiUrl:     "https://api.gogithub.com",
    ServerUrl:  "https://gogithub.com",
    GraphqlUrl: "https://api.gogithub.com/graphql",
    Issue:      github.ActionIssue{
        ActionRepo: github.ActionRepo{Owner:"tjamet", Repo:"actions-playground"},
        Number:     0,
    },
    Repo:              github.ActionRepo{Owner:"tjamet", Repo:"actions-playground"},
    OutputFilePath:    "",
    StateFilePath:     "",
    ExportEnvFilePath: "",
}
---
